src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Marketing</fullName>
        <description>All Leads Sent from Marketing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>MQL%2FInquiry</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Referrals</fullName>
        <description>Use this Lead Process for all internal referrals</description>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>MQL%2FInquiry</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leads associated with this account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <inlineHelpText>Capture the date/time of when a lead was moved out of a queue</inlineHelpText>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Team__c</fullName>
        <inlineHelpText>Initial Team this lead was assigned to</inlineHelpText>
        <label>Assigned Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hewett Research</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>US Research</fullName>
                </value>
                <value>
                    <fullName>EU SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>US SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>Head of SDR&apos;s</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion React</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
                <value>
                    <fullName>Ling</fullName>
                </value>
                <value>
                    <fullName>Judd</fullName>
                </value>
                <value>
                    <fullName>Greco</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Souter</fullName>
                </value>
                <value>
                    <fullName>Lemansky</fullName>
                    <isActive>false</isActive>
                    <label>Lemansky</label>
                </value>
                <value>
                    <fullName>Pliha</fullName>
                    <isActive>false</isActive>
                    <label>Pliha</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDR_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDR Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blog_and_Market_Currents_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blog and Market Currents Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRE_Exposure__c</fullName>
        <label>CRE Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-100M</fullName>
                </value>
                <value>
                    <fullName>$100-250M</fullName>
                </value>
                <value>
                    <fullName>$250-500M</fullName>
                </value>
                <value>
                    <fullName>$500M-1B</fullName>
                </value>
                <value>
                    <fullName>$1-3B</fullName>
                </value>
                <value>
                    <fullName>$3-5B</fullName>
                </value>
                <value>
                    <fullName>$5-10B</fullName>
                </value>
                <value>
                    <fullName>$10-50B</fullName>
                </value>
                <value>
                    <fullName>$50B+</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Segment__c</fullName>
        <label>Company Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Typeold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Type_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type_new__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Referral Process</description>
        <label>Main Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_RE_Research_Lacking_Other__c</fullName>
        <inlineHelpText>If other, please elaborate (open text)</inlineHelpText>
        <label>Current RE Research Lacking (Other).</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Medium__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Digital Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Source__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Digital Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Context__c</fullName>
        <label>Disqualified Context</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if Sales Region team is Europe</description>
        <inlineHelpText>Is Sales Team EU?</inlineHelpText>
        <label>EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>European_CPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>European CPPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>European_Webinars_and_Featured_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>European Webinars and Featured Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_AUM_Portfolio_Size_Mktg_Identified__c</fullName>
        <inlineHelpText>What is your firm’s AUM (Assets Under Management)/portfolio size?</inlineHelpText>
        <label>Firm AUM/Portfolio Size Mktg Identified.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0</fullName>
                </value>
                <value>
                    <fullName>Up to $500M</fullName>
                </value>
                <value>
                    <fullName>$500M - $1B</fullName>
                </value>
                <value>
                    <fullName>$1B - $2B</fullName>
                </value>
                <value>
                    <fullName>$2B - $5B</fullName>
                </value>
                <value>
                    <fullName>Greater than $5B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FitScore__c</fullName>
        <description>Receives FitScore from HubSpot</description>
        <label>FitScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_Client__c</fullName>
        <label>Former Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Relationship__c</fullName>
        <inlineHelpText>Determines the matched account’s client status</inlineHelpText>
        <label>GS Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Favor</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Client + Trial</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Exposure__c</fullName>
        <label>Geographic Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographies_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which geographic regions are of interest to you? Check all that apply.</inlineHelpText>
        <label>Geographies of Interest Mktg Identified.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. and Canada</fullName>
                </value>
                <value>
                    <fullName>United Kingdom/Continental Europe</fullName>
                </value>
                <value>
                    <fullName>Mexico and South America</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia (Including India)</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Score__c</fullName>
        <label>HubSpot Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead__c</fullName>
        <formula>IF( ISPICKVAL(LeadSource , &quot;Marketing Qualified&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Inquiry&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Digital Campaign&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Conference/Event&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Slide Request&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;New Alert Trial&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Demo Request&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Report Request&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Snowflake&quot;) , TRUE,
IF( ISPICKVAL(LeadSource , &quot;Targeted Campaign&quot;) , TRUE, 
FALSE))))))))))</formula>
        <label>Inbound Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>React Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Page_Seen__c</fullName>
        <label>Last Page Seen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Classification__c</fullName>
        <formula>CASE(LeadSource,
  &quot;Inquiry&quot;, &quot;Hot&quot;,
  &quot;Referral&quot;, &quot;Hot&quot;,
  &quot;AM Referral&quot;, &quot;Hot&quot;,
  &quot;Demo Request&quot;, &quot;Hot&quot;,
  &quot;Snowflake&quot;, &quot;Hot&quot;,
  &quot;React &amp; US News Ecomm Inquiries&quot;, &quot;Hot&quot;,
  &quot;Referral: Past Client Introduction&quot;, &quot;Hot&quot;,
IF(ISPICKVAL(LeadSource, &quot;&quot;) , &apos;&apos;, &quot;Warm&quot;))</formula>
        <inlineHelpText>Classification based on the lead source</inlineHelpText>
        <label>Lead Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Lead Contact)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <formula>IF(ISPICKVAL(LeadSource , &quot;Inquiry&quot;), 1,
 IF(ISPICKVAL(LeadSource , &quot;Digital Campaign&quot;), 2,
  IF(ISPICKVAL(LeadSource , &quot;News Alert Trial&quot;), 3,
    IF(ISPICKVAL(LeadSource , &quot;Marketing Qualified&quot;), 4, 
     IF(ISPICKVAL(LeadSource , &quot;Targeted Campaign&quot;), 4, 
      IF(ISPICKVAL(LeadSource , &quot;2019 Surplus&quot;), 5,
       IF(ISPICKVAL(LeadSource , &quot;BDR MQL&quot;), 5,
        IF(ISPICKVAL(LeadSource , &quot;LinkedIn&quot;), 5, null
))))))))</formula>
        <label>Lead Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Send Referral To:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Commercial + Advisory ARR</fullName>
                </value>
                <value>
                    <fullName>GSI</fullName>
                    <isActive>false</isActive>
                    <label>GSI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Membership_Lead__c</fullName>
        <label>List Membership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Identified_Country_lead__c</fullName>
        <label>Marketing Identified Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Identified_State_lead__c</fullName>
        <label>Marketing Identified State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Advisory_Fee_50k__c</fullName>
        <label>Typical Advisory Minimum (6-figures)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N.A.</fullName>
                    <default>true</default>
                    <label>N.A.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Marketing_Activity__c</fullName>
        <description>Pulled in from Hubspot</description>
        <label>Most Recent Marketing Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_Referral__c</fullName>
        <formula>$User.Id =  Referred_By_Lead__r.Id</formula>
        <label>My Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if Sales Region Team is Norht America</description>
        <inlineHelpText>Is Sales Team NA?</inlineHelpText>
        <label>NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Outreach_Date__c</fullName>
        <label>Next Outreach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Acq_Disp_Executed_Per_Year__c</fullName>
        <inlineHelpText>How many acquisitions/dispositions does your firm typically execute in a year?</inlineHelpText>
        <label>Number of Acq/Disp Executed Per Year.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_HubSpot_Score__c</fullName>
        <label>Original HubSpot Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Contact/Champion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Other Contact/Champion)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Vendors_Lead__c</fullName>
        <label>Other Vendors?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_of_Renewal__c</fullName>
        <label>Part of Renewal?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Stage__c</fullName>
        <description>Populated through SalesLoft Person Stage field</description>
        <label>Person Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Closed- Not Converted</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>